<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/Home"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </Space>
    <Button
        android:id="@+id/btn_draw"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/Draw"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        tools:ignore="InvalidId"
        android:layout_weight="1" />
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1.5" >
    </Space>
    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/Gallery"
        android:textSize="30sp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        tools:ignore="InvalidId" />
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1.5" >
    </Space>
    <Button
        android:id="@+id/btn_painter"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/logout"
        android:textSize="30sp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        tools:ignore="InvalidId" />

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="2" >
    </Space>

</LinearLayout>